Добавляет форму в модальное окно

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <input type="email" name="mail-user" id="mail" class="form-input" />
           </div>
 
-          <div class="form-field flex">
+          <div class="form-field comment flex">
             <label for="comment" class="form-label">Комментарий</label>
             <textarea
               class="comment"
@@ -450,15 +450,16 @@
               id="comment"
               placeholder="Введите текст"
               cols="30"
-              rows="6"
+              rows="7"
             ></textarea>
           </div>
 
           <div class="form-field policy flex">
             <input type="checkbox" name="policy" id="policy" class="form-input" />
             <label for="policy" class="form-label"
-              >Соглашаюсь с рассылкой и принимаю Условия договора</label
-            >
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="" class="policy-link">Условия договора</a>
+            </label>
           </div>
           <div class="flex">
             <button class="form-button" type="submit">Отправить</button>
