Добавляет форму в футер

--- a/index.html
+++ b/index.html
@@ -402,18 +402,18 @@
           </ul>
         </div>
 
-        <div class="subscrip">
+        <form class="subscrip">
           <h3 class="subscrip-title">Подпишитесь на рассылку</h3>
           <div class="flex">
             <input type="email" placeholder="E-mail" class="subscrip-input" />
             <button type="submit" class="subscrip-button">
               Подписаться
-              <svg class="submit-icon" width="24" height="24">
+              <svg class="subscrip-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </div>
-        </div>
+        </form>
       </div>
     </footer>
     <!-- Модальное окно -->
@@ -445,7 +445,7 @@
           <div class="form-field comment flex">
             <label for="comment" class="form-label">Комментарий</label>
             <textarea
-              class="comment"
+              class="comment-text"
               name="comment"
               id="comment"
               placeholder="Введите текст"
