--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>homework05</title>
+    <title>homework06</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -430,16 +430,25 @@
           <div class="form-field flex">
             <label for="name" class="form-label">Имя</label>
             <input type="text" name="name-user" id="name" class="form-input" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person-form"></use>
+            </svg>
           </div>
 
           <div class="form-field flex">
             <label for="tel" class="form-label">Телефон</label>
             <input type="tel" name="tel-user" id="tel" class="form-input" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-form"></use>
+            </svg>
           </div>
 
           <div class="form-field flex">
             <label for="mail" class="form-label">Почта</label>
             <input type="email" name="mail-user" id="mail" class="form-input" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email-form"></use>
+            </svg>
           </div>
 
           <div class="form-field comment flex">
@@ -454,13 +463,13 @@
             ></textarea>
           </div>
 
-          <div class="form-field policy flex">
-            <input type="checkbox" name="policy" id="policy" class="form-input" />
-            <label for="policy" class="form-label"
-              >Соглашаюсь с рассылкой и принимаю
-              <a href="" class="policy-link">Условия договора</a>
-            </label>
-          </div>
+          <label class="checkbox-label flex">
+            <input type="checkbox" name="policy" class="policy-checkbox" />
+            <span class="policy-icon"></span>
+            Соглашаюсь с рассылкой и принимаю
+            <a href="" class="policy-link">Условия договора</a>
+          </label>
+
           <div class="flex">
             <button class="form-button" type="submit">Отправить</button>
           </div>
