Добавляет переходы для ховера и фокуса

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <label for="comment" class="form-label">Комментарий</label>
             <textarea
               class="comment-text"
-              name="comment"
+              name="comment-user"
               id="comment"
               placeholder="Введите текст"
               cols="30"
@@ -466,8 +466,10 @@
           <label class="checkbox-label flex">
             <input type="checkbox" name="policy" class="policy-checkbox" />
             <span class="policy-icon"></span>
-            Соглашаюсь с рассылкой и принимаю
-            <a href="" class="policy-link">Условия договора</a>
+            <span class="checkbox-text"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="" class="policy-link">Условия договора</a></span
+            >
           </label>
 
           <div class="flex">
