--- a/portfolio.html
+++ b/portfolio.html
@@ -303,6 +303,19 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscrip">
+          <h3 class="subscrip-title">Подпишитесь на рассылку</h3>
+          <div class="flex">
+            <input type="email" placeholder="E-mail" class="subscrip-input" />
+            <button type="submit" class="subscrip-button">
+              Подписаться
+              <svg class="subscrip-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
