Учитывает замечания ментора

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           </svg>
         </button>
         <!--Форма  -->
-        <form class="form" action="">
+        <form class="form">
           <div class="form-field flex">
             <label for="name" class="form-label">Имя</label>
             <input type="text" name="name-user" id="name" class="form-input" />
@@ -459,7 +459,7 @@
               id="comment"
               placeholder="Введите текст"
               cols="30"
-              rows="7"
+              rows="5"
             ></textarea>
           </div>
 
@@ -472,9 +472,7 @@
             >
           </label>
 
-          <div class="flex">
-            <button class="form-button" type="submit">Отправить</button>
-          </div>
+          <button class="form-button flex" type="submit">Отправить</button>
         </form>
       </div>
       <script src="./js/modal.js"></script>
